Removed the get entry by date route
